// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBoxContainer - Tests renders searchBoxContainer correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
  id="container-searchbox"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={8}
  >
    <Styled(MuiBox)
      pb={1}
      pl={2}
    >
      <Connect(SearchTextBox)
        initiateSearch={[MockFunction]}
      />
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <Styled(MuiBox)
      m="auto"
      px={2}
    >
      <TranslatedSearchButton
        initiateSearch={[MockFunction]}
      />
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    item={true}
    justify="center"
    style={
      Object {
        "paddingBottom": 8,
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <Styled(MuiBox)
        m="auto"
      >
        <Connect(CheckboxesGroup) />
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Styled(MuiBox)
        px={0.75}
      >
        <Connect(SelectDates)
          initiateSearch={[MockFunction]}
        />
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`SearchBoxContainerSide - Tests renders searchBoxContainerSide correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-item MuiGrid-direction-xs-column"
  id="container-searchbox"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Styled(MuiBox)
      px={2}
    >
      <Connect(SearchTextBox)
        initiateSearch={[MockFunction]}
      />
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Styled(MuiBox)
      px={2}
    >
      <Connect(SelectDates)
        initiateSearch={[MockFunction]}
      />
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Connect(CheckboxesGroup) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Styled(MuiBox)
      mx={5}
      pb={2}
    >
      <TranslatedSearchButton
        initiateSearch={[MockFunction]}
      />
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Grid))>
</div>
`;
